remove images, replaced logo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ title: Latest Posts
 description: "Bart's testing & hacking posts."
 tags: [bart, blog]
 image:
-  feature: abstract-1.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: logo.jpg
 ---
 
 {% for post in paginator.posts %}
